...
        textField.keyboardType = model.keyboardType
        
        // accessbility identifier
        
        switch model {
        case .cardholderName:
            textField.accessibilityIdentifier = "nameField"
        case .cardNumber:
            textField.accessibilityIdentifier = "cardField"
        case .expiryDate:
            textField.accessibilityIdentifier = "expiryField"
        case .cvc:
            textField.accessibilityIdentifier = "cvcField"
        case .addressLine1:
            textField.accessibilityIdentifier = "addressLine1Field"
        case .addressLine2:
            textField.accessibilityIdentifier = "addressLine2Field"
        case .firstName:
            textField.accessibilityIdentifier = "firstNameField"
        case .lastName:
            textField.accessibilityIdentifier = "lastNameField"
        case .city:
            textField.accessibilityIdentifier = "cityField"
        case .country:
            textField.accessibilityIdentifier = "countryField"
            countryPickerTextField = textField
        case .postalCode:
            textField.accessibilityIdentifier = "postalCodeField"
        case .email:
            textField.accessibilityIdentifier = "emailField"
        case .iban:
            textField.accessibilityIdentifier = "ibanField"
        default:
            break
        }
        
        if (val == 0) {
            textField.becomeFirstResponder()
...
            countryPickerView.delegate = self
            countryPickerView.dataSource = self
            
            let toolbar = UIToolbar(frame: CGRect(x: 0, y: 0, width: UIScreen.main.bounds.width, height: 44))
            let cancelBarButton = UIBarButtonItem(title: "Cancel", style: .plain, target: self, action: #selector(toolbarCancelButtonTapped(_:)))
            let flexWidth = UIBarButtonItem(barButtonSystemItem: .flexibleSpace, target: nil, action: nil)
            let submitButton = UIBarButtonItem(title: "Submit", style: .done, target: self, action: #selector(toolbarSubmitButtonTapped(_:)))
            toolbar.items = [cancelBarButton, flexWidth, submitButton]
            textField.inputAccessoryView = toolbar
            
        default:
            break
        }
...
