...
/* Class = "UILabel"; text = "Label"; ObjectID = "dGo-X3-K9v"; */
"dGo-X3-K9v.text" = "Label";

/* Class = "UIButton"; normalTitle = "ApplePay Checkout"; ObjectID = "g8Q-ku-LZj"; */
"g8Q-ku-LZj.normalTitle" = "ApplePay Checkout";

/* Class = "UIButton"; normalTitle = "Add Card"; ObjectID = "gK5-e0-3v4"; */
"gK5-e0-3v4.normalTitle" = "Add Card";

/* Class = "UIButton"; normalTitle = "Add Direct Debit"; ObjectID = "kGA-CG-n4Z"; */
"kGA-CG-n4Z.normalTitle" = "Add Direct Debit";

/* Class = "UILabel"; text = "Actions:"; ObjectID = "lOm-z1-x2I"; */
"lOm-z1-x2I.text" = "Actions:";

/* Class = "UISegmentedControl"; mct-co-cWD.segmentTitles[0] = "Logo"; ObjectID = "mct-co-cWD"; */
...
