...
        case .address(let val): return val
        }
    }
    
    var topTitle: String {
        switch self {
        case .iban: return "Add bank account"
        case .name: return "Add bank account"
        case .email: return "Add bank account"
        case .address: return "Add bank account"
        }
    }
    
    var topRightButtonTitle: String {
        switch self {
        case .iban: return "Confirm"
        case .name: return "Confirm"
        case .email: return "Confirm"
        case .address: return "Confirm"
        }
    }
    
...
