...

        //
        let image = UIImage(named: "credit-card")
        let imageView = UIImageView(image: image)
        imageView.translatesAutoresizingMaskIntoConstraints = false
        button.addSubview(imageView)
        button.accessibilityIdentifier = "walletButton"
        imageView.centerXAnchor.constraint(equalTo: button.centerXAnchor).isActive = true
        imageView.centerYAnchor.constraint(equalTo: button.centerYAnchor).isActive = true
    }

    @objc private func presentWallet() {
        let vc = CheckoutViewController()
...
        callApi(request, completion: { [weak self] result in
            DispatchQueue.main.async {
                switch result {
                case .failure: return
                case .success:
                    indicator.removeFromSuperview()
                    let alert = UIAlertController(title: "Success!", message: "Your payment was successful.", preferredStyle: .alert)
                    alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: {
                        _ in
                        // Called when user taps outside
                    }))
                    self?.present(alert, animated: true, completion: nil)
                }
...
